<resources>
    <string name="app_name">Personal Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth Date</string>
    <string name="birth_date_value">01-01-01</string>
    <string name="set_date">Set Date</string>
    <string name="save">Save</string>
    <string-array name="photo_selections">
        <item>Take Photo</item>
        <item>Choose from library</item>
        <item>Cancel</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="birthdate_format">MMMM dd,yyyy</string>
    <string name="load_more_count">3</string>
    <string name="initial_list_count">20</string>
</resources>
