<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_padding_lr"
        android:paddingRight="@dimen/activity_padding_lr"
        android:paddingTop="@dimen/activity_padding"
        android:weightSum="1">


        <com.elementzinteractive.personalinfo.helper.CircularImageView
            android:id="@+id/imgAvatar"
            style="@style/ImageViewStyle"
            android:src="@mipmap/ic_user"
            app:civ_border="true"
            app:civ_border_color="#CCC"
            app:civ_border_width="4dp"
            app:civ_shadow="false"
            app:civ_shadow_color="#3f51b5"
            app:civ_shadow_radius="7" />

        <TextView
            android:id="@+id/tvURL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtFirstName"
            style="@style/EditViewStyle"
            android:hint="@string/first_name"
            android:textSize="@dimen/activity_font_size" />

        <EditText
            android:id="@+id/edtLastName"
            style="@style/EditViewStyle"
            android:hint="@string/last_name"
            android:textSize="@dimen/activity_font_size" />

        <EditText
            android:id="@+id/edtPhone"
            style="@style/EditViewStyle"
            android:hint="@string/phone"
            android:textSize="@dimen/activity_font_size" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/EditViewStyle"
            android:hint="@string/email"
            android:textSize="@dimen/activity_font_size" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/activity_font_size">

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.02"
                android:text="@string/gender"
                android:textSize="@dimen/activity_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rdGroupBtn"
            style="@style/LinearStyleRadioButton"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:textSize="@dimen/activity_font_size">

                <RadioButton
                    android:id="@+id/rdbtnGenderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.02"
                    android:text="Female"
                    android:textSize="@dimen/activity_font_size" />

                <RadioButton
                    android:id="@+id/rdbtnGenderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.02"
                    android:checked="false"
                    android:text="Male"
                    android:textSize="@dimen/activity_font_size" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/tvLabelBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:textSize="@dimen/activity_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBirthDate"
                style="@style/TextViewBirthDateStyle"
                android:text="@string/birth_date_value"
                android:textSize="@dimen/activity_font_size" />

            <Button
                android:id="@+id/btnSetDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/set_date"
                android:textSize="@dimen/activity_font_size" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>